# myrmidon

./: .gitignore  AUTHORS  CMakeLists.txt  FortMyrmidonConfig.cmake.in  README.rst  index.html  io.github.formicidae_tracker.Studio.yml  linkVersion.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cibuildwheel.yml  conda.yml  docs.yml  flatpak.yml  snap.yml
bindings/R/: .gitignore  CMakeLists.txt  DESCRIPTION.in
bindings/python/: .gitignore  CMakeLists.txt  Dockerfile  PostInstallWheel.cmake  pyproject.toml  setup.py
bindings/python/myrmidon/: FortMyrmidonConfig.cmake.in  pkgconfig
bindings/python/src/: Ant.cpp  BindMethods.hpp  BindTypes.hpp  CMakeLists.txt  Color.cpp  Experiment.cpp  Identification.cpp  Matchers.cpp  MovieSegmentData.cpp  Progress.cpp  Progress.hpp  Query.cpp  ResolveStack.cpp  Shapes.cpp  SignalHandling.cpp  Space.cpp  Time.cpp  TrackingSolver.cpp  Types.cpp  UTestData.cpp  Video.cpp  VideoSegment.cpp  Zone.cpp  main.cpp
bindings/python/src/fort_myrmidon/: CMakeLists.txt  Shapes.cpp  __init__.py  _fort_myrmidon.pyi  main.cpp
bindings/python/src/py_fort_myrmidon/: __init__.py
bindings/python/tests/: assertions.py  test_ant.py  test_color.py  test_duration.py  test_experiment.py  test_identification.py  test_matchers.py  test_movie_segment_data.py  test_query.py  test_setup.py  test_shapes.py  test_space.py  test_time.py  test_tracking_solver.py  test_types.py  test_video.py  test_zone.py
cmake/: FetchFortTime.cmake
conda/: conda_build_config.yaml  install-py-fort-myrmidon.sh  install-r-fort-myrmidon.sh  meta.yaml  myrmidon-dev.yml  test-libfort-myrmidon.sh  test-py-fort-myrmidon.py
docs/: CMakeLists.txt  conf.py  defining_ant_metadata.rst  identify_ants.rst  identifying_ants.rst  index.rst  installation.rst  introduction.rst  linking_tdata.rst  matching_movie_and_tracking_data.rst  performing_queries.rst  time.rst  version_dropdown.js
docs/api/: index.rst  time.rst
docs/studio/: introduction.rst  (+5 more)
latest/: .buildinfo  defining_ant_metadata.html  genindex.html  identifying_ants.html  index.html  installation.html  introduction.html  linking_tdata.html  matching_movie_and_tracking_data.html  matching_video.html  objects.inv  performing_queries.html  search.html  searchindex.js  space_zoning.html  time.html  version_dropdown.js
src/fort/myrmidon/: Ant.cpp  Ant.hpp  AntUTest.cpp  AntUTest.hpp  CMakeLists.txt  ColorUTest.cpp  ColorUTest.hpp  Experiment.cpp  Experiment.hpp  ExperimentUTest.cpp  ExperimentUTest.hpp  ForwardDeclaration.hpp  Identification.cpp  Identification.hpp  IdentificationUTest.cpp  IdentificationUTest.hpp  Matchers.cpp  Matchers.hpp  MatchersUTest.cpp  MaybeDeref.hpp  MovieSegmentData.cpp  MovieSegmentData.hpp  MovieSegmentDataUTest.cpp  Query.cpp  Query.hpp  QueryUTest.cpp  QueryUTest.hpp  Shapes.cpp  Shapes.hpp  ShapesUTest.cpp  Space.cpp  Space.hpp  SpaceUTest.cpp  TestSetup.cpp  TestSetup.hpp  TrackingSolver.cpp  TrackingSolver.hpp  TrackingSolverUTest.cpp  Traits.hpp  TraitsUTest.cpp  (+12 more)
src/fort/myrmidon/fakedata/: CloseUpWriter.cpp  CloseUpWriter.hpp  Config.cpp  Config.hpp  Fakedata.cpp  Fakedata.hpp  FrameDrawer.cpp  FrameDrawer.hpp  GeneratedData.cpp  GeneratedData.hpp  HermesFileWriter.cpp  HermesFileWriter.hpp  MovieWriter.cpp  MovieWriter.hpp  SegmentedDataWriter.hpp
src/fort/myrmidon/handle/: AntHandle.hpp  ExperimentHandle.hpp  HandleInContext.hpp  IdentificationHandle.hpp  SpaceHandle.hpp  ZoneDefinitionHandle.hpp  ZoneHandle.hpp
src/fort/myrmidon/priv/: Ant.cpp  Ant.hpp  AntMetadata.cpp  AntMetadata.hpp  AntMetadataUTest.cpp  AntPoseEstimateUTest.cpp  AntTimedValue.hpp  AntUTest.cpp  CollisionSolver.cpp  CollisionSolver.hpp  CollisionSolverUTest.cpp  ContiguousIDContainer.hpp  DataSegmenter.cpp  DataSegmenter.hpp  DenseMap.hpp  DenseMapUTest.cpp  Experiment.cpp  Experiment.hpp  ExperimentDataLessUTest.cpp  ExperimentDataLessUTest.hpp  ExperimentUTest.cpp  ForwardDeclaration.hpp  FrameReference.hpp  FrameReferenceUTest.cpp  FrameReferenceUTest.hpp  HandleInContext.hpp  Identification.cpp  Identification.hpp  IdentificationUTest.cpp  Identifier.cpp  Identifier.hpp  IdentifierUTest.cpp  Isometry2D.hpp  KDTreePrinter.hpp  KDTreeUTest.cpp  LocatableTypesUTest.cpp  LocatableTypesUTest.hpp  Matchers.cpp  Matchers.hpp  MatchersUTest.cpp  (+44 more)
src/fort/myrmidon/priv/proto/: ExperimentReadWriter.cpp  FileReadWriterUTest.cpp  IOUtils.cpp  IOUtils.hpp  IOUtilsUTest.cpp  TDDCacheUTest.cpp
src/fort/myrmidon/types/: AntInteraction.hpp  AntStaticValue.cpp  AntStaticValue.hpp  Color.hpp  FixableError.cpp  FixableError.hpp  IdentifiedFrame.cpp  Reporter.hpp  Traits.hpp  TraitsUTest.cpp  Value.cpp  Value.hpp  ValueUTest.cpp  ValueUtils.cpp  ValueUtils.hpp  ValueUtilsUTest.cpp
src/fort/myrmidon/utest-data/: CloseUpWriter.cpp  CloseUpWriter.hpp  Config.cpp  Config.hpp  FrameDrawer.cpp  FrameDrawer.hpp  GeneratedData.cpp  GeneratedData.hpp  HermesFileWriter.cpp  MovieWriter.cpp  MovieWriter.hpp  SegmentedDataWriter.hpp  UTestData.cpp  UTestData.hpp
src/fort/myrmidon/utils/: Defer.hpp
v0.8.0/: genindex.html  objects.inv  performing_queries.html  space_zoning.html  version_dropdown.js
v0.8.1/: defining_ant_metadata.html  genindex.html  identifying_ants.html  linking_tdata.html  matching_video.html  objects.inv  performing_queries.html  searchindex.js  version_dropdown.js
v0.8.2/: defining_ant_metadata.html  genindex.html  identifying_ants.html  introduction.html  linking_tdata.html  search.html  version_dropdown.js
v0.8.3/: defining_ant_metadata.html  genindex.html  installation.html  introduction.html  objects.inv  performing_queries.html  searchindex.js  version_dropdown.js
v0.8.3-zenodo/: defining_ant_metadata.html  genindex.html  identifying_ants.html  introduction.html  matching_video.html  objects.inv  performing_queries.html  searchindex.js  space_zoning.html  version_dropdown.js
v0.8.4/: index.html  introduction.html  linking_tdata.html  objects.inv  time.html  version_dropdown.js
v0.9.0/: identifying_ants.html  matching_video.html  objects.inv  search.html  version_dropdown.js
(+644 files in other folders)
